changed the thing to try and fix horinztonal scrolling on iphone

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*this is so u can scroll horizontally*/
 html, body {
-    max-width: 100%;
+    max-width: 100vw;
+
     overflow-x: hidden;
 }
 
@@ -336,8 +337,3 @@ nav .fa
 
 
 /*-----------------MEET THE E BOARD-------------------------*/
-
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-}
